--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "node -r dotenv/config src/main.jsx",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -13,7 +14,9 @@
     "@emailjs/browser": "^3.12.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.130",
     "@mui/material": "^5.15.13",
+    "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
